# upkuajing-tape-masking-film-leads

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: README.md
data/processed/: company-master.json  expansion-candidates.json  initial-six-contact-enriched-leads.csv  initial-six-contact-enriched-leads.json
data/raw/upkuajing/2026-07-17/: company-contacts-batch-01.json  company-contacts-batch-02.json  email-remediation-validity-check.json  email-validity-check.json  expansion-company-contacts-01.json  expansion-company-contacts-02.json  expansion-company-contacts-03.json  expansion-company-contacts-04.json  expansion-company-contacts-05.json  expansion-company-contacts-06.json  expansion-company-contacts-07.json  expansion-company-contacts-08.json  (+55 more)
deliverables/: tape-masking-film-customer-master.xlsx  客户表（7.17）.xlsx
docs/: api-research.md  cost-analysis.md  handoff.md
scripts/: apply_people_contacts.py  apply_web_research.py  build_company_master.py  build_workbook.mjs  enrich_company_contacts.py  expand_to_target.py  fetch_selected_people_contacts.py  localize_business_scopes.mjs  remediate_contacts.py  search_missing_email_people.py  search_people_per_company.py  validate_new_people_emails.py  validate_new_phones.py  validate_phones.py  validate_unchecked_emails.py  validate_website_emails.py
src/upkuajing_leads/: __init__.py  cli.py  client.py  core.py
tests/: test_contact_remediation.py  test_core.py  test_email_validation.py  test_incremental_expansion.py  test_master_metrics.py  test_people_contacts.py
(+14 files in other folders)
